fix: horizontal scroll-bar [320-425]

--- a/blocks/cover.css
+++ b/blocks/cover.css
@@ -36,8 +36,7 @@
   .cover {
     margin: 64px 0 0 0;
     min-height: 385px;
-    width: 100vw;
-    display: none;
+    width: 100%;
   }
 
   .cover__overlay {
